# toolmark

./: .gitignore  .pre-commit-config.yaml  BADGES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_issue.md
.github/workflows/: ci.yml
skillforge/: __init__.py  cli.py  config.py
skillforge/commands/: __init__.py  bench.py  compat.py  init.py  publish.py  scan.py  test.py
skillforge/models/: __init__.py  skill.py
skillforge/utils/: __init__.py  fs.py  llm.py  manifest.py
templates/_shared/: skillforge.yml
templates/blank/: SKILL.md
templates/blank/tests/: test_my_tool.yaml
templates/github-api/: SKILL.md
templates/github-api/tests/: test_search.yaml
tests/: conftest.py  test_compat.py  test_config.py  test_init.py  test_llm_judge.py  test_models.py  test_scan.py
